- 3.0.0
! Major overhaul of code
! Moved all helper functions to Subs-SimpleXBL.php
! Removed use of <code> in package-info.xml
! Added uninstall.xml to reduce uninstallation complications
! Merged add_settings.php with install.php
! Merged remove_settings.php with uninstall.php
! Added smf-readme.txt to make use of BBCode rather than Markdown
! All database changes will be uninstalled, including settings

+++++++++++++++++++++++++++++++++++

- 2.0.1
! More bugfixes
! Project discontinued

- 2.0.0
! Major rewrite over 1.0.x
! Many bugfixes applied

+++++++++++++++++++++++++++++++++++

- 1.0.6
! Fixed some minor bugs

- 1.0.5
! Fixed data gathering to use official API
! Most file modifications removed and replaced with integration hooks
! Minor bugfixes
! Rewrote most functions
! Made it easier to add functionality

- 1.0.4
! Rewrote data fetcher due to Xbox.com redesign
! Fixed a few minor bugs
! Removed 'zones' due to Xbox.com redesign

- 1.0.3
! Fixed bug from new xbox.com update
! Fixed lack of permissions
! Added database compatibility updates to make 1.1 upgrading easier

- 1.0.2
! Minor bugfixes
! Updated for 2.0 RC4

- 1.0.1
! Fixed 'xbl_admin_info' error
! Spruced up the leaderboard look
! Fixed inability to set a limit for gamers on each page

- 1.0 Final
! Fixed bug when removing gamertag that would return a fatal error.

- 1.0 RC2
! Fixed typo with default subaction
! Fixed bug that will add more than 5 games per gamer
! Fixed template loading error
! Modified external links to open in new window
! Added gamerscore icon
! Added support for more subactions later

- 1.0 RC1
! Fixed small query problems
! Fixed double gamertag entries
! Fixed error when privacy settings enabled